--- a/app/src/main/res/layout/fragment_edit_content_need_crop.xml
+++ b/app/src/main/res/layout/fragment_edit_content_need_crop.xml
@@ -1,5 +1,6 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
@@ -7,6 +8,8 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
+        app:navigationIcon="@drawable/ic_action_navigation_arrow_back_inverted"
+        app:titleTextColor="@color/pure_white"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
         android:background="@color/colorPrimary">
@@ -14,8 +17,8 @@
             android:id="@+id/image_sticker_trash"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:src="@drawable/trash_can_closed"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:src="@drawable/trash_can_closed"/>
     </android.support.v7.widget.Toolbar>
     <!--placeholder view that has 6:5 ratio-->
     <!--can be changed to square by calling setMakeSquare() and requestLayout-->
