--- a/app/src/main/res/layout/fragment_gallery_picker.xml
+++ b/app/src/main/res/layout/fragment_gallery_picker.xml
@@ -6,27 +6,39 @@
               android:background="@color/seperator_color"
               android:orientation="vertical">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="?actionBarSize">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            android:background="@color/colorPrimary"
-            app:navigationIcon="@drawable/ic_action_navigation_close"
-        >
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:background="@color/colorPrimary"
+        android:elevation="4dp"
+        app:navigationIcon="@drawable/ic_action_navigation_close">
+
+        <LinearLayout android:layout_width="match_parent"
+                      android:layout_height="match_parent"
+                      android:orientation="horizontal">
 
             <android.support.v7.widget.AppCompatSpinner
                 android:id="@+id/spinner"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:background="@null"
             />
 
-        </android.support.v7.widget.Toolbar>
+            <ImageView
+                android:id="@+id/spinner_arrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                android:layout_marginStart="-8dp"
+                android:src="@drawable/ic_action_spinner"
+            />
 
-    </android.support.design.widget.AppBarLayout>
+        </LinearLayout>
+
+    </android.support.v7.widget.Toolbar>
 
     <FrameLayout android:layout_width="match_parent"
                  android:layout_height="match_parent">
