--- a/app/src/main/res/layout/friend_search_item.xml
+++ b/app/src/main/res/layout/friend_search_item.xml
@@ -7,8 +7,8 @@
 
     <com.linute.linute.UtilsAndHelpers.ProfileImageView
         android:id="@+id/friendSearchItem_profile_image"
-        android:layout_width="@dimen/profile_image_radius"
-        android:layout_height="@dimen/profile_image_radius"
+        android:layout_width="52sp"
+        android:layout_height="52dp"
         android:layout_margin="@dimen/activity_horizontal_margin"
     />
 
