--- a/app/src/main/res/layout/tool_overlay_text.xml
+++ b/app/src/main/res/layout/tool_overlay_text.xml
@@ -53,7 +53,8 @@
         android:gravity="center"
         android:padding="4dp"
         android:textColor="@color/pure_white"
-        android:textSize="14sp"
+        android:textSize="16dp"
+        android:minHeight="24dp"
         android:inputType="textCapSentences|textNoSuggestions"
     />
 
