--- a/app/src/main/res/drawable/fb_button.xml
+++ b/app/src/main/res/drawable/fb_button.xml
@@ -3,5 +3,5 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="2dp"/>
-    <solid android:color="@color/facebook_blue"/>
+    <solid android:color="#5474ad"/>
 </shape>
