--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -40,7 +40,52 @@
             android:paddingBottom="8dp"
             android:scrollbars="none"
         />
+
+        <RelativeLayout
+            android:id="@+id/empty_view"
+            android:visibility="gone"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/center_monkey"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/ic_hear_no_monkey" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@id/center_monkey"
+                android:src="@drawable/ic_see_no_monkey" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/center_monkey"
+                android:src="@drawable/ic_speak_no_monkey" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="32dp"
+                android:layout_marginEnd="64dp"
+                android:layout_marginStart="64dp"
+                android:layout_marginTop="32dp"
+                android:gravity="center"
+                android:layout_centerHorizontal="true"
+                android:textAlignment="center"
+                android:text="@string/no_messages"
+                android:textColor="@color/eighty_black"
+                android:textSize="@dimen/header_font_size" />
+
+        </RelativeLayout>
     </FrameLayout>
+
+
 
    <!-- <include
         android:id="@+id/top_date_header"
