--- a/app/src/main/res/layout/fragment_discover_feed.xml
+++ b/app/src/main/res/layout/fragment_discover_feed.xml
@@ -33,6 +33,15 @@
             android:layout_marginTop="@dimen/margin_empty_image"
             android:gravity="center"
             tools:text="@string/discover_no_posts_campus" />
+
+        <Button
+            android:id="@+id/empty_view_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/margin_empty_screen"
+            android:text="Take me there!"
+            />
     </LinearLayout>
 
     <android.support.v4.widget.SwipeRefreshLayout
