empty view button for profile and updates. empty view buttons share a style for easy modification

--- a/app/src/main/res/layout/fragment_discover_feed.xml
+++ b/app/src/main/res/layout/fragment_discover_feed.xml
@@ -41,6 +41,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/margin_empty_screen"
             android:text="Take me there!"
+            style="@style/EmptyViewButton"
             />
     </LinearLayout>
 
