--- a/app/src/main/res/layout/fragment_updates.xml
+++ b/app/src/main/res/layout/fragment_updates.xml
@@ -23,8 +23,12 @@
     </android.support.design.widget.AppBarLayout>
 
 
+    <LinearLayout
+        android:id="@+id/empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
         <TextView
-            android:id="@+id/empty_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/margin_empty_screen"
@@ -37,7 +41,21 @@
             android:text="@string/updates_no_updates"
             android:visibility="gone"
             />
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            />
+        <Button
+            android:id="@+id/empty_view_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|bottom"
+            android:text="Find friends"
+            style="@style/EmptyViewButton"
+            />
 
+    </LinearLayout>
 
 
     <android.support.v4.widget.SwipeRefreshLayout
