--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -110,4 +110,6 @@
         <item name="android:textColor">@color/chat_subtext</item>
         <item name="android:textSize">12sp</item>
     </style>
+
+    <style name="EmptyViewButton"></style>
 </resources>
