--- a/app/src/main/res/layout/empty_cell_holders.xml
+++ b/app/src/main/res/layout/empty_cell_holders.xml
@@ -26,4 +26,13 @@
               android:gravity="center"
     />
 
+    <Button
+        android:id="@+id/empty_cell_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Create"
+        style="@style/EmptyViewButton"
+        />
+
 </LinearLayout>
