--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,56 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/mainActivity_drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <FrameLayout
-        android:id="@+id/mainActivity_fragment_holder"
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/mainActivity_drawerLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
 
-
-    <android.support.design.widget.NavigationView
-        android:id="@+id/mainActivity_navigation_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@color/colorSubPrimary"
-        app:headerLayout="@layout/drawer_header"
-        app:itemIconTint="@color/white"
-        app:itemTextAppearance="@style/NavDrawerTextStyle"
-        app:menu="@menu/main_activity_drawer"
-        style="@style/SelectableItemBackground"
-        >
 
         <FrameLayout
-            android:id="@+id/item_settings"
+            android:id="@+id/mainActivity_fragment_holder"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:background="?android:attr/selectableItemBackground"
-            android:orientation="horizontal"
-            android:layout_gravity="bottom"
-            >
-            <ImageView
-                android:padding="12dp"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_action_action_settings"
-                />
-            <TextView
-                android:paddingLeft="72dp"
+            android:layout_height="match_parent" />
+
+
+        <android.support.design.widget.NavigationView
+            android:id="@+id/mainActivity_navigation_view"
+            style="@style/SelectableItemBackground"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="@color/colorSubPrimary"
+            app:headerLayout="@layout/drawer_header"
+            app:itemIconTint="@color/white"
+            app:itemTextAppearance="@style/NavDrawerTextStyle"
+            app:menu="@menu/main_activity_drawer">
+
+            <FrameLayout
+                android:id="@+id/item_settings"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Settings"
-                android:layout_gravity="center_vertical"
-                android:textAppearance="@style/NavDrawerTextStyle"
-                />
+                android:layout_height="48dp"
+                android:layout_gravity="bottom"
+                android:background="?android:attr/selectableItemBackground"
+                android:orientation="horizontal">
 
-        </FrameLayout>
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:padding="12dp"
+                    android:src="@drawable/ic_action_action_settings" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:paddingLeft="72dp"
+                    android:text="Settings"
+                    android:textAppearance="@style/NavDrawerTextStyle" />
+
+            </FrameLayout>
 
 
-    </android.support.design.widget.NavigationView>
+        </android.support.design.widget.NavigationView>
 
-</android.support.v4.widget.DrawerLayout>
+
+    </android.support.v4.widget.DrawerLayout>
+
+
+    <ImageView
+        android:id="@+id/fairy_tutorial"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:src="@drawable/bg_tutorial_fairy"
+        android:visibility="gone" />
+</FrameLayout>
