fixed texttool cursors

--- a/app/src/main/res/layout/fragment_edit_content.xml
+++ b/app/src/main/res/layout/fragment_edit_content.xml
@@ -26,8 +26,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:background="#000"
-        android:focusableInTouchMode="true">
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:background="#000">
 
         <FrameLayout
             android:id="@+id/inner_content"
@@ -50,6 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"/>
+
         </FrameLayout>
     </com.linute.linute.SquareCamera.CustomFrameLayout>
 
