--- a/app/src/main/res/layout/fragment_search_user_list_item.xml
+++ b/app/src/main/res/layout/fragment_search_user_list_item.xml
@@ -1,53 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
     android:id="@+id/search_users_list_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
+    android:layout_height="wrap_content"
     android:background="?android:selectableItemBackground"
-    android:orientation="horizontal"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="2dp"
-    android:paddingBottom="2dp"
     android:gravity="center_vertical"
-    >
+    android:orientation="horizontal"
+>
 
     <com.linute.linute.UtilsAndHelpers.ProfileImageView
         android:id="@+id/search_users_list_image"
         android:layout_width="@dimen/profile_image_radius"
         android:layout_height="@dimen/profile_image_radius"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        />
+        android:layout_margin="@dimen/activity_horizontal_margin"
+    />
 
-    <TextView
-        android:id="@+id/search_users_list_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="16dp"
-        android:layout_toRightOf="@id/search_users_list_image"
-        android:ellipsize="end"
-        android:lines="1"
-        android:textColor="@color/eighty_black"
-        android:textSize="16sp"
-        tools:text="fdsf sfsdf sf dsffdsf sfsdf sf dsffdsf sfs" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:gravity="center_vertical"
+        android:orientation="vertical"
+    >
 
-    <TextView
-        android:id="@+id/search_users_list_college"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="16dp"
-        android:layout_toRightOf="@id/search_users_list_image"
-        android:layout_below="@id/search_users_list_name"
-        android:ellipsize="end"
-        android:lines="1"
-        android:textColor="@color/fifty_black"
-        android:textSize="12sp"
-        tools:text="fdsf sfsdf sf dsffdsf sfsdf sf dsffdsf sfs" />
+        <TextView
+            android:id="@+id/search_users_list_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:lines="1"
+            android:textColor="@color/eighty_black"
+            android:textSize="16sp"
+            tools:text="fdsf sfsdf sf dsffdsf sfsdf sf dsffdsf sfs"/>
+
+        <TextView
+            android:id="@+id/search_users_list_college"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:lines="1"
+            android:textColor="@color/fifty_black"
+            android:textSize="12sp"
+            tools:text="fdsf sfsdf sf dsffdsf sfsdf sf dsffdsf sfs"/>
+
+    </LinearLayout>
 
 
-</RelativeLayout>
+</LinearLayout>
