--- a/app/src/main/res/layout/list_item_user_w_college.xml
+++ b/app/src/main/res/layout/list_item_user_w_college.xml
@@ -4,7 +4,7 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content"
+              android:layout_height="48dp"
               android:background="?android:selectableItemBackground"
               android:clickable="true"
               android:orientation="horizontal">
@@ -13,7 +13,7 @@
         android:id="@+id/search_users_list_image"
         android:layout_width="@dimen/profile_image_radius"
         android:layout_height="@dimen/profile_image_radius"
-        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:layout_gravity="center_vertical"
         android:scaleType="centerCrop"/>
 
     <LinearLayout
