--- a/app/src/main/res/layout/fragment_chat_list_item_me.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_me.xml
@@ -138,6 +138,20 @@
 
         </FrameLayout>
 
+
+        <TextView
+            android:id="@+id/deleted"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:background="@drawable/chat_item_you"
+            android:padding="8dp"
+            android:text="Post unavailable"
+            android:textSize="@dimen/body_font_size"
+            android:textStyle="bold"
+            android:visibility="gone"
+        />
+
     </FrameLayout>
 
 </LinearLayout>
