--- a/app/src/main/res/layout/fragment_edit_content.xml
+++ b/app/src/main/res/layout/fragment_edit_content.xml
@@ -26,9 +26,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
+        android:background="#000"
         android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:background="#000">
+        android:focusableInTouchMode="true">
 
         <FrameLayout
             android:id="@+id/inner_content"
