--- a/app/src/main/res/layout/list_item_tool.xml
+++ b/app/src/main/res/layout/list_item_tool.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    android:layout_weight="1"
-    android:gravity="center_vertical"
-    android:orientation="vertical">
+              android:layout_width="wrap_content"
+              android:layout_height="match_parent"
+              android:layout_weight="1"
+              android:gravity="center_vertical"
+              android:orientation="vertical">
 
     <ImageView
         android:id="@+id/image_icon"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:padding="8dp"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:padding="8dp"/>
 
     <TextView
         android:id="@+id/text_label"
@@ -19,5 +19,5 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|bottom"
         android:textColor="@color/pure_white"
-        />
+    />
 </LinearLayout>
