--- a/app/src/main/res/drawable/bg_sticker.xml
+++ b/app/src/main/res/drawable/bg_sticker.xml
@@ -6,8 +6,8 @@
         android:radius="4dp"
         />
     <stroke
-        android:width="2dp"
-        android:color="@color/pure_white"
+        android:width="1dp"
+        android:color="#88FFFFFF"
         />
 
 </shape>
