changed empty chat view text color to gray

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -79,7 +79,7 @@
                 android:layout_centerHorizontal="true"
                 android:textAlignment="center"
                 android:text="@string/no_messages"
-                android:textColor="@color/eighty_black"
+                android:textColor="@color/fifty_black"
                 android:textSize="@dimen/header_font_size" />
 
         </RelativeLayout>
