attempt at solving EditFragment memory issue, gallery images being rotated

--- a/app/src/main/res/layout/fragment_profile_header_part_2.xml
+++ b/app/src/main/res/layout/fragment_profile_header_part_2.xml
@@ -58,7 +58,7 @@
         android:paddingEnd="@dimen/activity_horizontal_margin"
         android:paddingStart="@dimen/activity_horizontal_margin"
         android:textAllCaps="true"
-        android:textColor="#8067CDC9"
+        android:textColor="@color/secondaryColor"
         android:textSize="@dimen/sub_font_size"
         tools:text="City College of New York"
     />
