--- a/app/src/main/res/drawable/nav_icon.xml
+++ b/app/src/main/res/drawable/nav_icon.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:gravity="center">
-        <bitmap android:src="@drawable/ic_action_navigation_menu"/>
+        <thumbnail android:src="@drawable/ic_action_navigation_menu"/>
     </item>
 
     <item android:height="16dp"
