--- a/app/src/main/res/drawable/anon_checkbox.xml
+++ b/app/src/main/res/drawable/anon_checkbox.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item android:drawable="@drawable/ic_anon" android:state_enabled="false"/>
     <item android:drawable="@drawable/ic_anon" android:state_checked="false"/>
     <item android:drawable="@drawable/ic_anon_on_0" android:state_checked="true"/>
+
     <item android:drawable="@drawable/ic_anon"/>
     <!-- default state -->
 </selector>
