added college name to search

--- a/app/src/main/res/xml/pref_profile_frag_main.xml
+++ b/app/src/main/res/xml/pref_profile_frag_main.xml
@@ -6,7 +6,7 @@
         <Preference android:key="edit_profile"
                     android:title="Edit Profile"/>
         <Preference android:key="change_email"
-                    android:title="Change email"/>
+                    android:title="Change Email"/>
         <Preference android:key="change_phone_number"
                     android:title="Change Phone Number"/>
     </PreferenceCategory>
