--- a/app/src/main/res/layout/fragment_search_users.xml
+++ b/app/src/main/res/layout/fragment_search_users.xml
@@ -42,10 +42,25 @@
             android:layout_gravity="center"/>
     </FrameLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/selected_users"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:background="@color/chat_setting_divider"
+        >
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/selected_users"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/text_single_user_name"
+            android:textSize="16sp"
+            android:textColor="@color/pure_black"
+            android:paddingLeft="72dp"
+            android:layout_gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </FrameLayout>
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/search_users"
