added privacy change indicator for posts

--- a/app/src/main/res/layout/fragment_feed_detail_page_list_item.xml
+++ b/app/src/main/res/layout/fragment_feed_detail_page_list_item.xml
@@ -101,20 +101,19 @@
 
         <FrameLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/activity_horizontal_margin" >
 
             <com.linute.linute.UtilsAndHelpers.ProfileImageView
                 android:id="@+id/comment_user_image"
                 android:layout_width="@dimen/profile_image_radius"
                 android:layout_height="@dimen/profile_image_radius"
-                android:layout_margin="@dimen/activity_horizontal_margin" />
+                />
             <com.makeramen.roundedimageview.RoundedImageView
-                android:id="@+id/image_revealed"
+                android:id="@+id/privacy_changed"
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 android:layout_gravity="bottom|right"
-                android:layout_marginRight="8dp"
-                android:layout_marginBottom="8dp"
                 android:src="@drawable/ic_revealed_icon"
                 android:visibility="gone"
                 />
