--- a/app/src/main/res/layout/fragment_chat_list_item_you.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_you.xml
@@ -151,6 +151,7 @@
                 android:padding="@dimen/chat_message_bubble_padding"
                 android:textColor="@color/eighty_black"
                 android:textSize="@dimen/body_font_size"
+                android:textIsSelectable="true"
                 tools:text="test dfsdf sdf ddf dftest dfsdf sdf ddf dftest dfsdf sdf ddf dftest dfsdf sdf ddf dftest dfsdf sdf ddf df "/>
 
 
